# start-kit

.starter-kit/: README.md  kitcli.py
.starter-kit/core/: .editorconfig  AI-GUIDELINES.md  CONTEXT_GUIDE.md  CONTEXT_PACK.md
.starter-kit/core/.github/ISSUE_TEMPLATE/: bug.md
.starter-kit/core/.github/workflows/: ci.yml
.starter-kit/core/DECISIONS/: ADR-template.md
.starter-kit/core/contexts/: README.md
.starter-kit/core/scripts/: context-pack.sh  resume.sh
.starter-kit/presets/java-maven/config/checkstyle/: checkstyle.xml
.starter-kit/presets/java-maven/scripts/: smoke.sh
.starter-kit/presets/python/: .env.example  requirements-dev.txt
starter-kit/: README.md  apply.sh
starter-kit/core/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PITFALLS.md  README.md  STRUCTURE.template.md
starter-kit/core/.github/: PULL_REQUEST_TEMPLATE.md
starter-kit/core/.github/ISSUE_TEMPLATE/: feature.md
starter-kit/core/scripts/: bootstrap.sh  smoke.sh
starter-kit/presets/java-maven/: .env.example  Makefile  pom.template.additions.xml
starter-kit/presets/python/: .pre-commit-config.yaml  Makefile  pyproject.toml
starter-kit/presets/python/scripts/: smoke.sh
