[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
]

dynamic = ["readme"]

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E","F","I","B","UP","S"]
ignore = ["S101"]
exclude = [".venv","build","dist","migrations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
